Add time update mechanism

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -95,6 +95,8 @@
     <string name="timetable_time">Godziny</string>
     <string name="timetable_changes">Zmiany</string>
     <string name="timetable_no_items">Brak lekcji w tym dniu</string>
+    <string name="timetable_minutes">min</string>
+    <string name="timetable_seconds">sek</string>
 
 
     <!--CompletedLesson-->
