--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -97,6 +97,7 @@
     <string name="timetable_no_items">Brak lekcji w tym dniu</string>
     <string name="timetable_minutes">min</string>
     <string name="timetable_seconds">sek</string>
+    <string name="timetable_time_left">jeszcze %1$s</string>
 
 
     <!--CompletedLesson-->
