--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -98,6 +98,8 @@
     <string name="timetable_minutes">min</string>
     <string name="timetable_seconds">sek</string>
     <string name="timetable_time_left">jeszcze %1$s</string>
+    <string name="timetable_time_until">za %1$s</string>
+    <string name="timetable_finished">Zakończona</string>
 
 
     <!--CompletedLesson-->
