--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -332,6 +332,8 @@
     <string name="pref_services_interval">Interwał aktualizacji</string>
     <string name="pref_services_wifi">Tylko WiFi</string>
     <string name="pref_services_force_sync">Synchronizuj teraz</string>
+    <string name="pref_services_message_sync_success">Zsynchronizowano!</string>
+    <string name="pref_services_message_sync_failed">Synchronizacja nie powiodła się</string>
 
     <string name="pref_other_header">Inne</string>
     <string name="pref_other_grade_modifier_plus">Wartość plusa</string>
